--- a/Final Project/Final Project/Main.storyboard
+++ b/Final Project/Final Project/Main.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SAE-jc-jrG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SAE-jc-jrG">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--List chap ViewController-->
@@ -18,51 +20,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Summary Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JdB-YD-lqp">
-                                <rect key="frame" x="0.0" y="0.0" width="494" height="136"/>
-                                <color key="backgroundColor" red="0.9545985132" green="1" blue="0.28294004680000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="170" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6He-Qt-vCK">
-                                <rect key="frame" x="0.0" y="144" width="600" height="219"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="ka7-li-bYQ">
+                                <rect key="frame" x="248" y="30" width="200" height="280"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ka7-li-bYQ" secondAttribute="height" multiplier="1:1.4" id="V4C-cg-IUs"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="xZG-Eu-KSb">
+                                <rect key="frame" x="27" y="320" width="546" height="170"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="170" id="9Zu-6h-JMb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="107" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6He-Qt-vCK">
+                                <rect key="frame" x="0.0" y="490" width="600" height="110"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell3" rowHeight="170" id="Vl1-tf-Ee2" customClass="CustomCell3">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="170"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell3" rowHeight="107" id="Vl1-tf-Ee2" customClass="CustomCell3">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="107"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Vl1-tf-Ee2" id="p6a-IV-DD1">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="169"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="106"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ChapterName" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PPF-ic-RPi">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ChapterName" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PPF-ic-RPi">
                                                     <rect key="frame" x="8" y="8" width="584" height="45"/>
-                                                    <color key="backgroundColor" red="1" green="0.45233612200000001" blue="0.83055796439999996" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Link" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jtW-Rt-FjG">
-                                                    <rect key="frame" x="8" y="53" width="584" height="50"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date update" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oJU-ga-BQt">
-                                                    <rect key="frame" x="8" y="103" width="169" height="43"/>
-                                                    <color key="backgroundColor" red="1" green="0.77190066660000001" blue="0.77102297149999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date update" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oJU-ga-BQt">
+                                                    <rect key="frame" x="8" y="53" width="169" height="43"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="169" id="Hab-00-FuQ"/>
+                                                        <constraint firstAttribute="height" constant="43" id="bQJ-Oo-Wks"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="oJU-ga-BQt" secondAttribute="bottom" constant="2" id="TO5-yD-ghw"/>
+                                                <constraint firstItem="PPF-ic-RPi" firstAttribute="trailing" secondItem="p6a-IV-DD1" secondAttribute="trailingMargin" id="f7M-iS-J5o"/>
+                                                <constraint firstItem="PPF-ic-RPi" firstAttribute="top" secondItem="p6a-IV-DD1" secondAttribute="topMargin" id="sdz-Tc-m0S"/>
+                                                <constraint firstItem="oJU-ga-BQt" firstAttribute="leading" secondItem="p6a-IV-DD1" secondAttribute="leadingMargin" id="tpf-59-mRs"/>
+                                                <constraint firstItem="oJU-ga-BQt" firstAttribute="top" secondItem="PPF-ic-RPi" secondAttribute="bottom" id="yxK-wD-b1X"/>
+                                                <constraint firstItem="oJU-ga-BQt" firstAttribute="leading" secondItem="PPF-ic-RPi" secondAttribute="leading" id="zRg-ny-LNW"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="lblChapterName" destination="PPF-ic-RPi" id="c3Q-wi-f1c"/>
                                             <outlet property="lblDateUpdate" destination="oJU-ga-BQt" id="Zcg-2d-cb3"/>
-                                            <outlet property="lblLink" destination="jtW-Rt-FjG" id="6kr-sk-pxm"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -71,17 +85,26 @@
                                     <outlet property="delegate" destination="M8G-DC-31v" id="g6q-3I-iaO"/>
                                 </connections>
                             </tableView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="ka7-li-bYQ">
-                                <rect key="frame" x="10" y="376" width="240" height="128"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="ka7-li-bYQ" secondAttribute="trailing" constant="132" id="9Wp-WZ-doJ"/>
+                            <constraint firstItem="0ts-d0-lYV" firstAttribute="top" secondItem="6He-Qt-vCK" secondAttribute="bottom" id="9Ze-Ju-V7y"/>
+                            <constraint firstItem="ka7-li-bYQ" firstAttribute="top" secondItem="boQ-gj-y3i" secondAttribute="bottom" constant="10" id="Gkx-Sr-NCj"/>
+                            <constraint firstItem="xZG-Eu-KSb" firstAttribute="width" secondItem="A3t-ue-NbX" secondAttribute="width" multiplier="1:1.1" id="PfU-Uc-z1D"/>
+                            <constraint firstItem="6He-Qt-vCK" firstAttribute="leading" secondItem="A3t-ue-NbX" secondAttribute="leading" id="Sed-wt-93f"/>
+                            <constraint firstAttribute="trailing" secondItem="6He-Qt-vCK" secondAttribute="trailing" id="VsB-pR-b8V"/>
+                            <constraint firstItem="ka7-li-bYQ" firstAttribute="width" secondItem="A3t-ue-NbX" secondAttribute="width" multiplier="1:3" id="YV0-kz-7hM"/>
+                            <constraint firstItem="xZG-Eu-KSb" firstAttribute="centerX" secondItem="A3t-ue-NbX" secondAttribute="centerX" id="clG-sn-hCH"/>
+                            <constraint firstItem="xZG-Eu-KSb" firstAttribute="top" secondItem="ka7-li-bYQ" secondAttribute="bottom" constant="10" id="kGP-fm-Shh"/>
+                            <constraint firstItem="6He-Qt-vCK" firstAttribute="top" secondItem="xZG-Eu-KSb" secondAttribute="bottom" id="uxQ-fm-5ot"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="YeK-89-4HM"/>
                     <connections>
-                        <outlet property="imvManga" destination="ka7-li-bYQ" id="VB0-cw-YAA"/>
-                        <outlet property="lblSummaryContent" destination="JdB-YD-lqp" id="Aq5-Xo-auk"/>
+                        <outlet property="imvManga" destination="ka7-li-bYQ" id="8Br-8u-jsb"/>
                         <outlet property="tableView" destination="6He-Qt-vCK" id="QEg-8l-2tu"/>
+                        <outlet property="txtDescription" destination="xZG-Eu-KSb" id="fae-Nh-o7k"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FkD-DC-0G9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -205,6 +228,20 @@
                                     <outlet property="delegate" destination="g45-xh-hyX" id="NVy-PY-rhB"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Px9-S3-s14">
+                                <rect key="frame" x="266" y="289" width="60" height="60"/>
+                                <state key="normal" image="backPage"/>
+                                <connections>
+                                    <action selector="clickPreviewPage:" destination="g45-xh-hyX" eventType="touchUpInside" id="1PY-iV-Baf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5e2-PV-VFP">
+                                <rect key="frame" x="266" y="289" width="40" height="40"/>
+                                <state key="normal" image="nextPage"/>
+                                <connections>
+                                    <action selector="clickNextPage:" destination="g45-xh-hyX" eventType="touchUpInside" id="MWY-OL-ZwQ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -216,6 +253,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="MaW-Je-ik6"/>
                     <connections>
+                        <outlet property="btnNext" destination="5e2-PV-VFP" id="ycm-P9-4JK"/>
+                        <outlet property="btnPre" destination="Px9-S3-s14" id="hGT-xe-vJF"/>
                         <outlet property="tableView" destination="DSq-uE-yN7" id="DAf-nj-Ke1"/>
                     </connections>
                 </viewController>
@@ -287,6 +326,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backPage" width="14" height="22"/>
+        <image name="nextPage" width="14" height="22"/>
         <image name="placeholder" width="1000" height="1000"/>
     </resources>
 </document>
